PrintStringTableStatistics crashes JVM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • Environment:

      The crash happens on Windows only, but the original problem is not platform-specific.

      Works fine on JDK 8u181, 9.0.1, 10.0.1.

    • 11
    • b16

        Running java -XX:+PrintStringTableStatistics results in EXCEPTION_ACCESS_VIOLATION during JVM shutdown.

        fastdebug build fails on the following assertion:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (c:\Users\Andrei\java\jdk\src\hotspot\share\runtime/thread.hpp:740), pid=5480, tid=3572
        # assert(current != 0LL) failed: Thread::current() called on detached thread
        #
        # JRE version: OpenJDK Runtime Environment (11.0+28) (fastdebug build 11+28)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 12-internal+0-adhoc..jdk, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)

        String table is dumped after the last thread exits, but SymbolTable::dump() still calls Thread::current() which returns NULL.

        V [jvm.dll+0xd90f04] VMError::report_and_die+0x64 (vmerror.cpp:1269)
        V [jvm.dll+0x594ffe] report_vm_error+0x7e (debug.cpp:233)
        V [jvm.dll+0x1681b] Thread::current+0x5b (thread.hpp:740)
        V [jvm.dll+0xcd55d7] SymbolTable::dump+0x27 (symboltable.cpp:617)
        V [jvm.dll+0x750d1f] exit_globals+0x3f (init.cpp:176)
        V [jvm.dll+0xd2a840] Threads::destroy_vm+0x380 (thread.cpp:4309)
        V [jvm.dll+0x7f9237] jni_DestroyJavaVM+0xb7 (jni.cpp:4100)

              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Andrei Pangin
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: