8211821: PrintStringTableStatistics crashes JVM

During JVM exit, print the Symbol and String tables before current thread gets deleted.

Reviewed-by: iklam, dholmes